# valerie

./: .env.example  .gitignore  README.md
backend/: main.py  pyproject.toml  pyrightconfig.json
backend/prompts/: cliptagger_system.jinja  cliptagger_user.jinja  describe_video_timeline.jinja
backend/valerie/: __init__.py  db.py  pipeline.py
frontend/: package.json
frontend/.claude/: settings.local.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: theme-toggle-button.tsx  theme-toggle.tsx
valerie/: pipeline.py
