[project]
name = "valerie"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "prefect==3.5.0",
    "httpx>=0.27.2",
    "google-generativeai>=0.5.4",
    "python-dotenv>=1.0.1",
    "pymongo>=4.8.0",
    "boto3>=1.35.0",
]
